添加目录功能

--- a/source/_posts/还没有一个男孩坚强.md
+++ b/source/_posts/还没有一个男孩坚强.md
@@ -3,6 +3,7 @@ title: 还没有一个男孩坚强
 date: 2019-04-04 21:04:37
 tags: [迦百农,何以为家,电影]
 categories: 随想
+toc: true
 ---
 ![fullsizeoutput_44a.jpeg](https://i.loli.net/2019/04/04/5ca6009fb0382.jpeg)
 
