--- a/source/_posts/简历.md
+++ b/source/_posts/简历.md
@@ -8,11 +8,11 @@ tags:
 
 ## 基本信息
 
-* **姓名**：NoOne  
+* **姓名**：幼稚园保安  
 
 <!--more-->
 * **毕业院校**：杭州电子科技大学
-* **专业**：电子信息工程
+* **专业**：安保科
 * **学历**：本科
 * **邮箱**：meifu2027@gmail.com
 * **婚恋状况**: 单身
